test/syc/good/ifbool.c
/*
 * If statement with boolean argument.
 */

int d;

_Bool b;

/* If statement with _Bool argument. */
void if_bool(void)
{
	if (b)
		d = 1;
	else
		d = 0;
}
