test/syc/bad/inlinelvar.c
/*
 * Invalid use of 'inline' with local variable declaration.
 */

void foo(void)
{
	inline int b;
}
